--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: #FAFAFA;
+  min-height: 100vh;
+}
+
+html {
+  background-color: #FAFAFA;
+}
